--- a/src/demoanimate.html
+++ b/src/demoanimate.html
@@ -5,7 +5,7 @@
     <script>
         $(document).ready(function(){
             $("button").click(function(){
-                var div = $("div");
+                let div = $("div");
                 div.animate({bottom: '300px'}, "fast");
                 div.animate({fontSize: '500px'}, "slow");
             });
